--- a/bondoc-do/index.html
+++ b/bondoc-do/index.html
@@ -3,5 +3,7 @@
   <body>
     <h1>My First Heading</h1>
     <p>My first paragraph.</p>
+    <p>Second Paragraph</p>
+    <p>Third Paragraph</p>
   </body>
 </html>
