Alpha Test Build 0.0.1
First Build, this is where it all began.

--- a/ardales-c-FluffyClicker/index.html
+++ b/ardales-c-FluffyClicker/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fluffy Clicker</title>
+</head>
+
 <body>
+    <p id="goldMined">0 Gold Mined</p>
+    <button onclick="mineGold()">Mine Gold</button>
+    <button onclick="buyGoldPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Gold</button>
 
-<h1>My First Yeah Yeah Heading</h1>
-<p>My first Yeah Yeah paragraph.</p>
-
+    <script src="main.js" charset="utf-8" type="text/javascript"></script>
 </body>
 </html>
