Front end update

--- a/santos-p-RGW(Responsive Gaming Website)/index.html
+++ b/santos-p-RGW(Responsive Gaming Website)/index.html
@@ -1,9 +1,56 @@
-<!DOCTYPE html>
-<html>
-<body>
+<html >
+    <head >
+         <meta charset = " UTF - 8 " >
+         <meta name = " viewport " content = " width = device - width , initial - scale = 1.0 " >
+         <title > Gaming Website </title>
+         <link rel = " stylesheet " href = " style.css " >
+         <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    </head>
+    <body>
+</html >
+         <header>
+    </body >
+             <a href="#" class="logo"> Gamers Hub</a>
+             <ul class = " nav " >
+                  <li > <a href="#"> Home </a> </li >
+                  <li > <a href="#"> About </a> </li >
+                  <li > <a href="#"> Games </a> </li >
+                  <li > <a href="#"> Tournaments </a> </li >
+                  <li > <a href="#"> Contact </a> </li >
+                                                         
+             </ul >
+             <div class="action">
+                <div class="searchBx">
+                    <a href="#"><i class='bx bx-search'></i></a>
+                    <input type="text" placeholder="Search Games">
+                </div>
+             </div>
+             <div class = "toggleMenu"></div>
+         </header>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+         <!-- Home Banner -->
 
-</body>
+         <div class = "banner">
+            <div class = "bg">
+                <div class = "content">
+                    <h2>GAME ON!<br>
+                    Play Games!</h2>
+                    <p>Eat. Sleep. Game. Repeat.</p>
+                    <a href="#" class "btn">Join Now!</a>
+                </div>
+                <img src = "./images/gunner.png">
+         </div>
+    </div>   
+
+      <!-- About -->
+       <div class="about"> 
+       <div class = "contentBX">
+        <h2>About Us</h2>
+        <p>wala pa akong maisip na info dito pero masasakit ko na yehey nalang
+        </p>
+        <a href="#">Read more</a>
+       </div>
+       <img src = "./images/AboutUs.png">
+    </div>
+    </body>
 </html>
