--- a/tongol-albert-full_responsive_multi_page_website_design/index.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta name=""viewport" content=""wit=device-width, initial-scale=1.0">
+    <title>University Website Design - Easy Tutorials</title>
+    <link rel=""stylesheet" href="style.css">
+</head>
 <body>
+    <section class="header"></section>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
 
 </body>
 </html>
