--- a/tongol-albert-full_responsive_multi_page_website_design/index.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name=""viewport" content=""wit=device-width, initial-scale=1.0">
+    <meta name="viewport" content="wit=device-width, initial-scale=1.0">
     <title>University Website Design - Easy Tutorials</title>
-    <link rel=""stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="image/logo.png"></a>
+            <a href="index.html"><img src="images/logo.png"></a>
             <div class="nav-links">
                 <ul>
                     <li><a href="">HOME</a></li>
                     <li><a href="">ABOUT</a></li>
-                    <li><a href="">COURSE</a></li>
+                    <li><a href="">COURSES</a></li>
                     <li><a href="">BLOG</a></li>
                     <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
-
     </section>
-
-
 </body>
 </html>
