--- a/tongol-albert-full_responsive_multi_page_website_design/index.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/index.html
@@ -4,6 +4,9 @@
     <meta name="viewport" content="wit=device-width, initial-scale=1.0">
     <title>University Website Design - Easy Tutorials</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="header">
@@ -19,6 +22,11 @@
                 </ul>
             </div>
         </nav>
+        <div class="text-box">
+            <h1>The First Lay-founded Catholic School as well as the First Co-educational Catholic School</h1>
+            <p>Private research non-profit coeducational Basic and Higher education institution</p>
+            <a href=""> Visit Us To Know More</a>
+        </div>
     </section>
 </body>
 </html>
