changd folder structure and started working on index/home page

--- a/bondoc-do-automotivePartsEcommerceSite/index.html
+++ b/bondoc-do-automotivePartsEcommerceSite/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Auto-Autoparts and Vehicles</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <header>
+    <a id="companyname" href="#">AutoBuddy</a>
+    <nav>
+      <ul class="navlinks">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Vehicles</a></li>
+        <li><a href="#">Spare Parts</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">About Us</a></li>
+      </ul>
+    </nav>
+    <a class="signup_button" href="#"
+      ><button id="signup_button">Sign Up</button></a
+    >
+  </header>
   <body>
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
+    <div></div>
   </body>
 </html>
