--- a/santos-p-RGW2(Responsive Gaming Website)/index.html
+++ b/santos-p-RGW2(Responsive Gaming Website)/index.html
@@ -39,7 +39,17 @@
                     <li><a href="#contact">Contact Us</a></li>
             </div>
         </div>
+        <div class="notification">
+            <div class="notification-box">
+                <i class='bx bxs-check-circle' ></i>
+                <p>Congratulations, Your game was downloaded successfully</p>
+            </div>
+            <div class="notification-box box-color">
+                <i class='bx bxs-x-circle'></i>
+                <p>Sorry, could not apply changes</p>
+            </div>
         </div>
+    </div>
     </header>
 
 
