--- a/santos-p-RGW2(Responsive Gaming Website)/index.html
+++ b/santos-p-RGW2(Responsive Gaming Website)/index.html
@@ -36,7 +36,7 @@
                     <li><a href="#trending">Trending</a></li>
                     <li><a href="#new">New Games</a></li>
                     <li><a href="#action">Action Games</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="#Sign Up">Sign Up</a></li>
             </div>
         </div>
         <div class="notification">
@@ -51,6 +51,16 @@
         </div>
     </div>
     </header>
+
+    <!-- home section start -->
+    <section class="home container" id="home">
+        <img src="images/home.png" alt="">
+        <div class="home-text">
+            <h1>CITY OF THE <br> FUTURE</h1>
+            <a href="#" class="btn"> Available Now!</a>
+        </div>
+    </section>
+
 
 
 
