--- a/tongol-albert-full_responsive_multi_page_website_design/index.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/index.html
@@ -23,9 +23,9 @@
             </div>
         </nav>
         <div class="text-box">
-            <h1>The First Lay-founded Catholic School as well as the First Co-educational Catholic School</h1>
-            <p>Private research non-profit coeducational Basic and Higher education institution</p>
-            <a href=""> Visit Us To Know More</a>
+            <h1>The First Lay-founded Catholic School and <br>The First Co-educational Catholic School</h1>
+            <p>Private research non-profit coeducational Basic and <br>Higher education institution</p>
+            <a href="" class="hero-btn"> Visit Us To Know More</a>
         </div>
     </section>
 </body>
