changed html and css to incorporate bootstrap

--- a/bondoc-do-automotivePartsEcommerceSite/index.html
+++ b/bondoc-do-automotivePartsEcommerceSite/index.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Auto-Autoparts and Vehicles</title>
-    <link rel="stylesheet" href="css/main.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>DBFAB | Autoparts & Fabrication | Home</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
   </head>
-  <header>
-    <a id="companyname" href="#">AutoBuddy</a>
-    <nav>
-      <ul class="navlinks">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Vehicles</a></li>
-        <li><a href="#">Spare Parts</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a href="#">About Us</a></li>
-      </ul>
-    </nav>
-    <a class="signup_button" href="#"
-      ><button id="signup_button">Sign Up</button></a
-    >
-  </header>
-  <body>
-    <div></div>
+  <nav class="navbar navbar-expand-lg bg-primary">
+    <div class="container-fluid" >
+      <a class="navbar-brand" href="#" style="color:white">dB-Fabrication</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav" >
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#" style="color:white">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" style="color:white">Ready to Order Parts</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" style="color:white">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" style="color:white">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
