--- a/santos-p-RGW2(Responsive Gaming Website)/index.html
+++ b/santos-p-RGW2(Responsive Gaming Website)/index.html
@@ -10,6 +10,9 @@
      <link rel="stylesheet" href="css/style.css">
      <!-- box icons -->
      <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+     <!-- Swiper CSS file link -->
+     <link rel="stylesheet" href="css/swiper-bundle.min.css">
+
 </head>
 <body>
     <!-- header -->
@@ -60,6 +63,160 @@
             <a href="#" class="btn"> Available Now!</a>
         </div>
     </section>
+    <!-- home section end -->
+
+    <!-- trending section start -->
+     <section class="trending container" id="trending">
+        <div class="heading">
+            <i class='bx bxs-flame'></i>
+            <h2>Trending Games</h2>
+        </div>
+        <!-- content -->
+        <div class="trending-content swiper">
+            <div class="swiper-wrapper">
+                <!-- slide 1 -->
+                <div class="swiper-slide">
+                    <div class="box">
+                        <img src="images/trending1.webp" alt="">
+                        <div class="box-text">
+                            <h2>Cyberpunk 2077</h2>
+                            <h3>Action</h3>
+                            <div class="rating-download">
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <span>4.7</span>
+                                </div>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                 <!-- slide 2 -->
+                 <div class="swiper-slide">
+                    <div class="box">
+                        <img src="images/trending2.jpg" alt="">
+                        <div class="box-text">
+                            <h2>Battlefield 2042</h2>
+                            <h3>Action</h3>
+                            <div class="rating-download">
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <span>4.7</span>
+                                </div>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                 <!-- slide 3 -->
+                 <div class="swiper-slide">
+                    <div class="box">
+                        <img src="images/trending3.jpg" alt="">
+                        <div class="box-text">
+                            <h2>Assassin's Creed Valhalla</h2>
+                            <h3>Action</h3>
+                            <div class="rating-download">
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <span>4.7</span>
+                                </div>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                 <!-- slide 4 -->
+                 <div class="swiper-slide">
+                    <div class="box">
+                        <img src="images/trending4.jpg" alt="">
+                        <div class="box-text">
+                            <h2>Ghost of Tushima</h2>
+                            <h3>Action</h3>
+                            <div class="rating-download">
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <span>4.7</span>
+                                </div>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                 <!-- slide 5 -->
+                 <div class="swiper-slide">
+                    <div class="box">
+                        <img src="images/trending5.png" alt="">
+                        <div class="box-text">
+                            <h2>GTA V</h2>
+                            <h3>Action</h3>
+                            <div class="rating-download">
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <span>4.7</span>
+                                </div>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- slide 6 -->
+                <div class="swiper-slide">
+                    <div class="box">
+                        <img src="images/trending6.jpg" alt="">
+                        <div class="box-text">
+                            <h2>Dying Light 2</h2>
+                            <h3>Action</h3>
+                            <div class="rating-download">
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <span>4.7</span>
+                                </div>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- slide 7 -->
+                <div class="swiper-slide">
+                    <div class="box">
+                        <img src="images/trending7.png" alt="">
+                        <div class="box-text">
+                            <h2>Halo Infinite</h2>
+                            <h3>Action</h3>
+                            <div class="rating-download">
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <span>4.7</span>
+                                </div>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- slide 8 -->
+                <div class="swiper-slide">
+                    <div class="box">
+                        <img src="images/trending8.png" alt="">
+                        <div class="box-text">
+                            <h2>Resident Evil Village</h2>
+                            <h3>Action</h3>
+                            <div class="rating-download">
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <span>4.7</span>
+                                </div>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+              
+              </div>
+
+        </div>
+     </section>
+    <!-- trending section end -->
 
 
 
@@ -76,7 +233,8 @@
 
 
 
-
+<!-- link swiper file -->
+<script src="js/swiper-bundle.min.js"></script>
 
     <!-- link to js -->
     <script src="js/main.js"></script>
