--- a/tongol-albert-full_responsive_multi_page_website_design/index.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
+
     <meta name="viewport" content="wit=device-width, initial-scale=1.0">
+
     <title>University Website Design - Easy Tutorials</title>
+
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
+
 <body>
+
     <section class="header">
+
         <nav>
             <a href="index.html"><img src="images/logo.png"></a>
-            <div class="nav-links">
+
+            <div class="nav-links" id="navLinks">
+
+                <i class="fa fa-times" onclick="hideMenu()"></i>
+
                 <ul>
                     <li><a href="">HOME</a></li>
                     <li><a href="">ABOUT</a></li>
@@ -21,12 +34,31 @@
                     <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
+
+            <i class="fa fa-bars" onclick="showMenu()"></i>
+
         </nav>
+
         <div class="text-box">
-            <h1>The First Lay-founded Catholic School and <br>The First Co-educational Catholic School</h1>
+            <h1>The First Lay-founded and <br>Co-educational Catholic School</h1>
             <p>Private research non-profit coeducational Basic and <br>Higher education institution</p>
             <a href="" class="hero-btn"> Visit Us To Know More</a>
         </div>
+
     </section>
+
+    <script>
+
+        var navLinks=document.getElementById("navLinks");
+        
+        function showMenu(){
+            navLinks.style.right="0";
+        }
+        function hideMenu(){
+            navLinks.style.right="-200px";
+        }
+    </script>
+
 </body>
+
 </html>
