--- a/bondoc-do-automotivePartsEcommerceSite/index.html
+++ b/bondoc-do-automotivePartsEcommerceSite/index.html
@@ -12,29 +12,77 @@
     />
   </head>
   <nav class="navbar navbar-expand-lg bg-primary">
-    <div class="container-fluid" >
-      <a class="navbar-brand" href="#" style="color:white">dB-Fabrication</a>
+    <div class="container">
+      <a class="navbar-brand" href="#" style="color:whitesmoke"><img src="images/logo.png" alt="dB-AutoFabrication"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav" >
+        <ul class="navbar-nav ms-auto" >
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#" style="color:white">Home</a>
+            <a class="nav-link active" aria-current="page" href="#" style="color:whitesmoke">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color:white">Ready to Order Parts</a>
+            <a class="nav-link" href="#" style="color:whitesmoke">Available Parts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color:white">Pricing</a>
+            <a class="nav-link disabled" style="color:whitesmoke">Contact Us</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" style="color:white">Contact Us</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color:whitesmoke">
+              Custom Orders
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Order Requets</a></li>
+              <li><a class="dropdown-item" href="#">Track Order</a></li>
+            </ul>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+  
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="10000">
+        <img src="/bondoc-do-automotivePartsEcommerceSite/images/placeholder-image.png" class="d-block w-100" alt="img1">
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="/bondoc-do-automotivePartsEcommerceSite/images/placeholder-image.png" class="d-block w-100" alt="img2">
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="/bondoc-do-automotivePartsEcommerceSite/images/placeholder-image.png" class="d-block w-100" alt="img3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+
+    <div class="container">
+    <h1>Who are we?</h1>
+    <p>We are a small group of automotive enthusiasts who provide our services to enhance your car or motorcycle experience. <br> We offer custom parts fabrication and can procure OEM spec parts for many makes and models of vehicle. </p>
+    <p></p>
+    </div>
+ <div class="card-auto" style="width: 18rem;">
+  <img src="/bondoc-do-automotivePartsEcommerceSite/images/placeholder-image.png" class="card-img-top" alt="card image here">
+  <div class="card-body">
+    <h5 class="card-title">Read more about us</h5>
+    <p class="card-text">Learn about our story. How we started, what we do and where we are today. Learn about how our services help people have a better vehicle ownership experience</p>
+    <a href="#" class="btn btn-primary">Read Article</a>
+  </div>
+</div>
+<!--Bootstrap js link-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
