updated home page

--- a/santos-p-RGW2(Responsive Gaming Website)/index.html
+++ b/santos-p-RGW2(Responsive Gaming Website)/index.html
@@ -24,7 +24,7 @@
             <!-- Nav Icons-->
             <div class="nav-icons">
                 <i class='bx bx-bell bx-tada' id="bell-icon"><span></span></i>
-                <i class='bx bxs-download'></i>
+                <i class='bx bxs-user'></i>
                 <div class="menu-icon">
                     <div class="line1"></div>
                     <div class="line2"></div>
@@ -39,7 +39,7 @@
                     <li><a href="#trending">Trending</a></li>
                     <li><a href="#new">New Games</a></li>
                     <li><a href="#action">Action Games</a></li>
-                    <li><a href="#Sign Up">Sign Up</a></li>
+                    <li><a href="#About Us">About Us</a></li>
             </div>
         </div>
         <div class="notification">
