--- a/policarpio-ag-ecommerce/index.html
+++ b/policarpio-ag-ecommerce/index.html
@@ -20,7 +20,7 @@
 
     <div id="menu-bar" class="fas fa-bars"></div>
 
-    <a href="#" class="logo">Jordan</a>
+    <a href="#" class="logo">Jumpmans</a>
 
     <nav class="navbar">
         <a href="#home">home</a>
