added - ALL PRODUCTS page

--- a/Ecommerce/products.html
+++ b/Ecommerce/products.html
@@ -4,7 +4,7 @@
         <meta charset = "UTF-8">
         <meta name ="viewport" content="width=device-width", initial-scale="1.0">
         <title> All Products - Red Store </title>
-        <link rel = "stylesheet" href="style1.css">
+        <link rel = "stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css">
@@ -33,7 +33,7 @@
     <div class ="small-container">
        
         <div class="row row-2">
-            <h2>All Prdoucts</h2>
+            <h2>All Products</h2>
             <select>
                 <option>Default Shorting</option>
                 <option>Short by Price</option>
