--- a/Ecommerce/index.html
+++ b/Ecommerce/index.html
@@ -20,7 +20,7 @@
                 <ul id="MenuItems">
                     <li><a href="">Home</a></li>
                     <li><a href="">About</a></li>
-                    <li><a href="">Products</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li><a href="">Contact</a></li>
                     <li><a href="">Account</a></li>
                 </ul>
