--- a/Ecommerce/products.html
+++ b/Ecommerce/products.html
@@ -22,7 +22,7 @@
                     <li><a href="">About</a></li>
                     <li><a href="">Products</a></li>
                     <li><a href="">Contact</a></li>
-                    <li><a href="">Account</a></li>
+                    <li><a href="">Account</a></li> 
                 </ul>
             </nav>
             <img src="images/cart.png" width="30px" height="30px">
@@ -38,11 +38,10 @@
                 <option>Default Shorting</option>
                 <option>Short by Price</option>
                 <option>Short by Popularity</option>
-                <option>Short by rating</option>
+                <option>Short by Rating</option>
                 <option>Short by Sale</option>
             </select>
         </div>
-
 
         <div class="row">
             <div class ="col-4">
