--- a/Ecommerce/index.html
+++ b/Ecommerce/index.html
@@ -18,9 +18,10 @@
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="products.html">Products</a></li>
+                    <li><a href="product-details.html">Product-Details</a></li>
                     <li><a href="">Contact</a></li>
                     <li><a href="">Account</a></li>
                 </ul>
