--- a/santos-p-RGW2(Responsive Gaming Website)/index.html
+++ b/santos-p-RGW2(Responsive Gaming Website)/index.html
@@ -4,6 +4,7 @@
      <meta charset="UTF-8">
      <meta http-quiv="X-UA-Compatible "content="IE=edge >
      <meta name="viewport" content= "width=device-width, initial-scale=1.0">
+     <title>Responsive Game Store Website</title>
      <!-- fav icon -->
      <link rel="shortcut icon" href ="images/fav.png" type ="image/x-icon">
      <!-- link to css -->
@@ -217,6 +218,146 @@
         </div>
      </section>
     <!-- trending section end -->
+    <!-- new section starts -->
+    <section class="new container" id="new">
+        <div class="heading">
+            <i class='bx bx-game'></i>
+            <h2>New Games</h2>
+        </div>
+        <!-- content -->
+        <div class="new-content">
+            <!-- box 1-->
+            <div class="box">
+                <img src="images/new1.jpg" alt="">
+                <div class="box-text">
+                    <h2>Subway Surfers</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- box 2-->
+             <div class="box">
+                <img src="images/new2.jpg" alt="">
+                <div class="box-text">
+                    <h2>Call of Duty: Mobile</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- box 3-->
+             <div class="box">
+                <img src="images/new3.jpg" alt="">
+                <div class="box-text">
+                    <h2>Free Guy</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- box 4-->
+             <div class="box">
+                <img src="images/new4.jpg" alt="">
+                <div class="box-text">
+                    <h2>Clash Royale</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- box 5-->
+             <div class="box">
+                <img src="images/new5.png" alt="">
+                <div class="box-text">
+                    <h2>Minecraft</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- box 6-->
+             <div class="box">
+                <img src="images/new6.png" alt="">
+                <div class="box-text">
+                    <h2>PUBG</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- box 7-->
+             <div class="box">
+                <img src="images/new7.png" alt="">
+                <div class="box-text">
+                    <h2>Fornite</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- box 8-->
+             <div class="box">
+                <img src="images/new8.jpg" alt="">
+                <div class="box-text">
+                    <h2>Marvel of Champions</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="next-page">
+            <a href="#">Next Page</a>
+        </div>
+    </section>
+    <!-- new section end -->
+    <!-- copyright -->
+    <div class="copyright container">
+        <a href="#" class="logo">Game <span>Store</span></a>
+        <p>&#169; D-13th All right Reserved</p>
+    </div>
 
 
 
