--- a/santos-p-RGW2(Responsive Gaming Website)/index.html
+++ b/santos-p-RGW2(Responsive Gaming Website)/index.html
@@ -16,6 +16,10 @@
 
 </head>
 <body>
+    <!-- scroll bar -->
+    <div class="progress">
+        <div class="progress-bar" id="scroll-bar"></div>
+    </div>
     <!-- header -->
     <header>
         <!-- nav -->
@@ -121,7 +125,7 @@
                                     <i class='bx bxs-star'></i>
                                     <span>4.7</span>
                                 </div>
-                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                                <a href="download1.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
                             </div>
                         </div>
                     </div>
@@ -237,7 +241,7 @@
                             <i class='bx bxs-star'></i>
                             <span>4.7</span>
                         </div>
-                        <a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                        <a href="download2.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
                     </div>
                 </div>
             </div>
