--- a/tongol-albert-full_responsive_multi_page_website_design/index.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/index.html
@@ -125,7 +125,7 @@
         <div class="testimonials-col">
             <img src="images/user1.jpg">
             <div>
-                <p>Holy Angel University is, if not the best, one of the best schools in the region teaching accountancy. The atmosphere is highly suitable to learning. Professors (specifically) in the Accountancy Department also practice their profession and share real-life situations which makes every class interesting. The University continuously improves it's facilities to better serve it's students.</p>
+                <p>Holy Angel University is, if not the best, one of the best schools in the region teaching accountancy. The atmosphere is highly suitable to learning. Professors (specifically) in the Accountancy Department also practice their profession and share real-life situations which makes every class interesting.</p>
                 <h3>Nicole Mercado</h3>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
@@ -148,6 +148,28 @@
         </div>
     </div>
     </section>
+
+<!----------------Call To Action------------------>
+
+<section class="cta">
+    <h1>Enroll For Various Online Courses <br> Anywhere From Around the World</h1>
+    <a href="" class="hero-btn">Contact Us</a>
+</section>
+
+<!--------------------Footer---------------------->
+
+<section class="footer">
+    <h4>About Holy Angel University</h4>
+    <p>Holy Angel University has over 16,000 students, making it one of the biggest schools in Central Luzon. Established in 1933 by local philanthropist Juan D. Nepomuceno, it is considered the Philippines' first Catholic school founded by a layman instead of the usual diocese or religious congregation. It is also the first Catholic high school in the country that is co-educational, instead of the usual exclusively for boys or exclusively for girls.</p>
+<div class="icons">
+    <i class="fa fa-facebook"></i>
+    <i class="fa fa-twitter"></i>
+    <i class="fa fa-youtube"></i>
+    <i class="fa fa-instagram"></i>
+    <i class="fa fa-linkedin"></i>
+</div>
+<p>Made with <i class="fa fa-heart-o"></i> by Albert Tongol</p>
+</section>
 
 <!----------------Javascript for Toggle Menu--------------->
 
