--- a/bondoc-jd-inventory/InventorySystem/Contact.html
+++ b/bondoc-jd-inventory/InventorySystem/Contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="/InventorySystem/css/contact.css">
-    <title>Document</title>
+    <title>Contacts</title>
 </head>
 <body>
     <div class="content">
