The real first test commit, absolutely nothing to see here

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-pag nababasa mo to, tama ka boi
+<html>
+    <head>
+    <title>Poor Man's Tetris</title>
+    <body>
+        <canvas id="tetris" width="240" height="460"></canvas>
+        <script src="tetris.js"></script>
+    </body>
+    </head>
+</html>
