almost done front end

--- a/santos-p-RGW2(Responsive Gaming Website)/index.html
+++ b/santos-p-RGW2(Responsive Gaming Website)/index.html
@@ -29,13 +29,19 @@
             <!-- Nav Icons-->
             <div class="nav-icons">
                 <i class='bx bx-bell bx-tada' id="bell-icon"><span></span></i>
-                <i class='bx bxs-user'></i>
+
+                <!-- signup button -->
+                <div class="signup">
+                    <a href="./singup.html"><i class='bx bxs-user'></i></a>
+                </div>
+
                 <div class="menu-icon">
                     <div class="line1"></div>
                     <div class="line2"></div>
                     <div class="line3"></div>
                 </div>
             </div>
+            
             <!-- menu -->
             <div class="menu">
                 <img src="images/menu.png" alt="">
