--- a/santos-p-RGW2(Responsive Gaming Website)/download1.html
+++ b/santos-p-RGW2(Responsive Gaming Website)/download1.html
@@ -29,7 +29,12 @@
             <!-- Nav Icons-->
             <div class="nav-icons">
                 <i class='bx bx-bell bx-tada' id="bell-icon"><span></span></i>
-                <i class='bx bxs-user'></i>
+
+                <!-- signup button -->
+                <div class="signup">
+                    <a href="./singup.html"><i class='bx bxs-user'></i></a>
+                </div>
+
                 <div class="menu-icon">
                     <div class="line1"></div>
                     <div class="line2"></div>
