done front end?

--- a/santos-p-RGW2(Responsive Gaming Website)/download2.html
+++ b/santos-p-RGW2(Responsive Gaming Website)/download2.html
@@ -30,7 +30,7 @@
             <div class="nav-icons">
                 <i class='bx bx-bell bx-tada' id="bell-icon"><span></span></i>
 
-                <!-- signup button -->
+                <!-- signup button :) -->
                 <div class="signup">
                     <a href="./singup.html"><i class='bx bxs-user'></i></a>
                 </div>
