FE done, starting the Login Page

--- a/santos-p-RGW2(Responsive Gaming Website)/download1.html
+++ b/santos-p-RGW2(Responsive Gaming Website)/download1.html
@@ -30,9 +30,9 @@
             <div class="nav-icons">
                 <i class='bx bx-bell bx-tada' id="bell-icon"><span></span></i>
 
-                <!-- signup button -->
+                <!-- signup button :) -->
                 <div class="signup">
-                    <a href="./singup.html"><i class='bx bxs-user'></i></a>
+                    <a href="./Login.html"><i class='bx bxs-user'></i></a>
                 </div>
 
                 <div class="menu-icon">
