--- a/tongol-albert-full_responsive_multi_page_website_design/news.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/news.html
@@ -29,34 +29,33 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="course.html">COURSES</a></li>
-                    <li><a href="news.html">NEWS</a></li>
+                    <li><a href="blog.html">NEWS</a></li>
                     <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
-
             <i class="fa fa-bars" onclick="showMenu()"></i>
 
         </nav>
 
-        <h1>About Us</h1>
+        <h1>Holy Angel University Blog Site</h1>
     </section>
-<!-----------------about us content------------------>
+<!----------------news content------------------>
 
-<section class="about-us">
-    <div class="column">
-        <div class="about-col">
-            <h1>History</h1>
-        <div class="about-col">
-            <div class="left">
-                <img src="images/about1.jpg">
-            </div> 
+<section class="news-content">
+    <div class="row">
+        <div class="blog-left">
+            <img src="images/certificate.jpg">
+            <h2>INTERNATIONAL RESEARCH PUBLICATION (BSBA STUDENTS)</h2>
+        </div>
+        <div class="blog-right">
+            
         </div>
     </div>
-    <div class="about-col">
-        <p>In June 1933, Holy Angel Academy (HAA) opened its doors to a modest group of 78 high school students in the Holy Rosary Parish Convent. It was initiated through the joint efforts of the late Don Juan D. Nepomuceno, a known philanthropist/prominent businessman and Fr. Pedro P. Santos, then parish priest of the town of Angeles and later Archbishop of Nueva Caceres. Its primary purpose was to offer Catholic education in the secondary level, which was the felt need of the community at that...
-        <a href="" class="red-btn">Continue Reading</a></p>
-    </div>
 </section>
+
+<!-------------facilities---------------->
+
+
 
 <!--------------------Footer---------------------->
 
