Racing Game Beta

--- a/bamba-jk/IncrementalGaame.html
+++ b/bamba-jk/IncrementalGaame.html
@@ -19,11 +19,11 @@ body{
     cursor: pointer;
 }
   </style>
-  <title>Exponent Madness</title>
+  <title>Krazy Klicker</title>
 <script>
 var game = { // game object to store all save-pertinent info
 	num: 1, // number that we are increasing
-	mult: 1.2, // number that it multiplies by on click
+	mult: 1, // number that it multiplies by on click
 	countdown: 0, // counter for the button cooldown
 notation: 0// standard notation - clearly the best notation!
 }
