--- a/malonzo-lm-FoodBlog/index.html
+++ b/malonzo-lm-FoodBlog/index.html
@@ -24,9 +24,9 @@
        <div class="banner">
             <div class="container">
                 <h1 class="banner-title">
-                    <span>Foodies are welcome here!</span>
+                    <span>Nothing brings people together like Good Food!</span>
                 </h1>
-                <p>Nothing brings people together like Good Food!</p>
+                <p>Foodies are welcome here!</p>
             </div>
         </div> 
         <!-- end of header -->
