--- a/inventory/index.html
+++ b/inventory/index.html
@@ -8,20 +8,32 @@
   <title>Inventory</title>
 </head>
 <body>
-  <h1>INVENTORY</h1>
+  <h1>COMPUTER PARTS INVENTORY</h1>
   <button>View Stocks</button>
   <button>Add Stocks</button>
   <div class="stock-container">
     this is where the available stocks 
     <ul>
       <li>
-        item 1 <button>delete</button>
+        CPU <button>delete</button>
       </li>
       <li>
-        item 2 <button>delete</button>
+        GPU <button>delete</button>
       </li>
       <li>
-        item 3 <button>delete</button>
+        Motherboard <button>delete</button>
+      </li>
+      <li>
+        PSU <button>delete</button>
+      </li>
+      <li>
+        RAM <button>delete</button>
+      </li>
+      <li>
+        Hard Drive <button>delete</button>
+      </li>
+      <li>
+        Solid State Drive <button>delete</button>
       </li>
     </ul>
   </div>
