--- a/santos-p-RGW2(Responsive Gaming Website)/index.html
+++ b/santos-p-RGW2(Responsive Gaming Website)/index.html
@@ -32,7 +32,7 @@
 
                 <!-- signup button :) -->
                 <div class="signup">
-                    <a href="./Login.html"><i class='bx bxs-user'></i></a>
+                    <a href="./Login.php"><i class='bx bxs-user'></i></a>
                 </div>
 
                 <div class="menu-icon">
