--- a/tongol-albert-full_responsive_multi_page_website_design/contact.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/contact.html
@@ -38,23 +38,50 @@
 
         </nav>
 
-        <h1>About Us</h1>
+        <h1>Contact Us</h1>
     </section>
-<!-----------------about us content------------------>
+<!-----------------contact us content------------------>
 
-<section class="about-us">
-    <div class="column">
-        <div class="about-col">
-            <h1>History</h1>
-        <div class="about-col">
-            <div class="left">
-                <img src="images/history1.jpg">
-            </div> 
+<section class="location">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3851.459608020209!2d120.58782767947102!3d15.13308316791338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396f24ec2f5a1f9%3A0x5e0af8a6aaab2282!2sHoly%20Angel%20University!5e0!3m2!1sen!2sph!4v1663597411350!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</section>
+
+<section class="contact-us">
+    <div class="row">
+        <div class="contact-col">
+            <div>
+                <i class="fa fa-home"></i>
+                <span>
+                    <h5>#1 Holy Angel Avenue, Sto. Rosario,</h5>
+                    <p>Angeles City, Philippines 2009</p>
+                </span>
+            </div>
+            <div>
+                <i class="fa fa-phone"></i>
+                <span>
+                    <h5>(63) 045-625-5748<br>
+                        (63) 045-625-9620<br>
+                        (63) 045-625-9619</h5>
+                </span>
+            </div>
+            <div>
+                <i class="fa fa-envelope"></i>
+                <span>
+                    <h5>admissions@hau.edu.ph</h5>
+                    <p>Email us your query</p>
+                </span>
+            </div>
         </div>
-    </div>
-    <div class="about-col">
-        <p>In June 1933, Holy Angel Academy (HAA) opened its doors to a modest group of 78 high school students in the Holy Rosary Parish Convent. It was initiated through the joint efforts of the late Don Juan D. Nepomuceno, a known philanthropist/prominent businessman and Fr. Pedro P. Santos, then parish priest of the town of Angeles and later Archbishop of Nueva Caceres. Its primary purpose was to offer Catholic education in the secondary level, which was the felt need of the community at that...
-        <a href="history.html" class="red-btn">Continue Reading</a></p>
+        <div class="contact-col">
+            <form action="">
+                <input type="text" placeholder="Firstname" required>
+                <input type="text" placeholder="Lastname" required>
+                <input type="number" placeholder="Contact Number" required>
+                <input type="email" placeholder="Email Address" required>
+                <textarea rows="8" placeholder="Message" required></textarea>
+                <button type="submit" class="hero-btn red-btn">Send Form</button>
+            </form>
+        </div>
     </div>
 </section>
 
