--- a/tongol-albert-full_responsive_multi_page_website_design/history.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/history.html
@@ -30,7 +30,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="course.html">COURSES</a></li>
                     <li><a href="news.html">NEWS</a></li>
-                    <li><a href="">CONTACT</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
