added CART-DB-JS and updated some features

--- a/Ecommerce/products.html
+++ b/Ecommerce/products.html
@@ -21,12 +21,11 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="products.html">Products</a></li>
-                    <li><a href="product-details.html">Product-Details</a></li>
                     <li><a href="">Contact</a></li>
                     <li><a href="">Account</a></li> 
                 </ul>
             </nav>
-            <img src="images/cart.png" width="30px" height="30px">
+            <a href="cart.html"><img src="Images/cart.png" width="30px" height="30px"></a>
             <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
     </div>
@@ -47,7 +46,7 @@
         <div class="row">
             <div class ="col-4">
                <img src="images/product-1.jpg">
-               <h4>Red PUMA T-shirt</h4>
+               <h4>Red Puma T-shirt</h4>
                <div class="rating">
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
