--- a/Ecommerce/index.html
+++ b/Ecommerce/index.html
@@ -21,13 +21,12 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="products.html">Products</a></li>
-                    <li><a href="product-details.html">Product-Details</a></li>
                     <li><a href="">Contact</a></li>
-                    <li><a href="">Account</a></li>
+                    <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <img src="images/cart.png" width="30px" height="30px">
-            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <a href="cart.html"><img src="Images/cart.png" width="30px" height="30px"></a>
+            <img src="images/menu.png"  class="menu-icon" onclick="menutoggle()">
         </div>
         <div class="row">
             <div class="col-2">
@@ -67,7 +66,7 @@
         <div class="row">
             <div class ="col-4">
                <img src="images/product-1.jpg">
-               <h4>Red PUMA T-shirt</h4>
+               <a href="">Red Puma T-shirt</a>
                <div class="rating">
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
